--- a/Comfizen/Views/SettingsWindow.xaml
+++ b/Comfizen/Views/SettingsWindow.xaml
@@ -165,6 +165,10 @@
                             <StackPanel>
                                 <CheckBox Content="{local:Translate Settings_SaveMetadata}" IsChecked="{Binding SavePromptWithFile}" ToolTip="{local:Translate Settings_SaveMetadataTooltip}"/>
                                 <CheckBox Content="{local:Translate Settings_RemoveBase64OnSave}" IsChecked="{Binding RemoveBase64OnSave}" ToolTip="{local:Translate Settings_RemoveBase64OnSaveTooltip}" Margin="0,5,0,0"/>
+                                <CheckBox Content="{local:Translate Settings_SaveImagesFlat}" 
+                                          IsChecked="{Binding SaveImagesFlat}" 
+                                          ToolTip="{local:Translate Settings_SaveImagesFlatTooltip}" 
+                                          Margin="0,5,0,0"/>
                                 
                                 <Border BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="0,1,0,0" Margin="0,10" Padding="0,10,0,0">
                                     <StackPanel>
